apply plugin: 'java'

version '0.9.6'

sourceCompatibility = 1.8

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.13'
}
